# mcp-sound-notifications

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mcp.json  pyproject.toml
config/: sound-config.yaml
config/themes/: theme.yaml  themes-create-commit.md
config/themes/default/: default-commit-create.md  themes_default_README.md
config/themes/example-warcraft/: theme.yml
docs/: CUSTOMIZATION.md  IDE-SETUP.md  SOUND-SOURCES.md  docs-commit.md
docs/adrs/: S-ADR-021-Actor-Centric-Sound-Design-Philosophy.md  T-ADR-011a-Multi-Agent-Audio-Persona-System.md
examples/: claude-mcp.json.example  cursor-mcp.json.example  examples_README.md  vscode-mcp.json.example  windsurf-mcp.json.example
examples/enforcement/: claude-instructions-snippet.md  copilot-instructions-snippet.md  cursor-hooks.json  cursor-rule.mdc  enforcement_README.md  gemini-instructions-snippet.md  windsurf-hooks.json  windsurf-rule.md
mcp-server/: __init__.py  mcp-server_README.md  sound_server.py  stng_universe.py
scripts/: fetch-freesounds.py  find-system-sounds.sh  install.sh  scripts_README.md
